0027828: Reference documentation of AIS_Trihedron contains invalid information about default size.

Fixed the description of AIS_Trihedron